# ircc_pr_tracker

./:     README.md  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  roadmap.md  telegram_configuration.md
.github/workflows/: docker-ci.yml
src/: config.yaml  email_notifier.py  logger.py  main.py  main_config.yaml  telegram_client.py  telegram_notifier.py  webdriver_manager.py  webdriver_manager_c.py
src/pages/: __init__.py  applications_details_page.py  login_page.py  processing_time_page.py  task_page.py
src/tests/: main_test.py  test_email_notifier.py
