[tool.poetry]
name = "ircc_pr_tracker"
version = "0.1.0"
description = "A Python script to track PR application status and send updates via Telegram."
authors = ["Volodymyr"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
selenium = "4.25.0"
requests = "2.32.3"
pyyaml = "6.0.2"
python-dotenv = "^1.0.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
